--- a/index.html
+++ b/index.html
@@ -55,15 +55,44 @@
         <div class="container align-self-center">
             <div class="row">
                 <div class="col-md-12 texto">
-                    <h1 class="display-1 text-white ">Música para todos</h1>
 
-                    <a href="" class="btn btn-success btn-lg">
-                        Aproveite o spotify free
-                    </a>
+                    <div id="carousel-home" class="carousel slide" data-ride="carousel"> <!--Carousel -->
 
-                    <a href="" class="btn btn-outline-light btn-lg ">
-                        obter spotify premium
-                    </a>
+
+                        <div class="carousel-inner"> <!--Inner -->
+
+                            <div class="carousel-item active">
+                                <h1 class="display-1 text-white ">Música para todos</h1>
+
+                                <a href="" class="btn btn-success btn-lg">
+                                    Aproveite o spotify free
+                                </a>
+
+                                <a href="" class="btn btn-outline-light btn-lg ">
+                                    obter spotify premium
+                                </a>
+                            </div>
+
+                            <div class="carousel-item">
+                                <h1 class="display-1 text-white">As melhores rádios</h1>
+
+                                <a href="" class="btn btn-outline-light btn-lg ">
+                                    <i class="fas fa-music"></i> Ouça agora
+                                </a>
+
+                            </div>
+
+                        </div> <!--Inner -->
+
+                        <!--Controles -->
+                        <a href="#carousel-home" class="carousel-control-prev" data-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                        </a>
+
+                        <a href="#carousel-home" class="carousel-control-next" data-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                        </a>
+                    </div> <!--Carousel -->
                 </div>
             </div>            
         </div>
@@ -138,12 +167,12 @@
                 </div>
 
                 <div class="col-md-8">
-                    <div class="row">
+                    <div class="row rotacionar">
                         <div class="col-md-6">
                             <img src="imagens/iphone1.png" class="img-fluid">
                         </div>
 
-                        <div class="col-md-6">
+                        <div class="col-md-6 cel">
                             <img src="imagens/iphone2.png" class="img-fluid">
                         </div>
                     </div>
@@ -151,6 +180,91 @@
             </div>
         </div>
     </section> <!-- Fim Recursos -->
+
+    <footer id="rodapé"> <!--Inicio rodapé-->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2 logo"> <!--Logo-->
+                    <a href="index.html">
+                        <img src="imagens/spotify.svg">
+                    </a>
+                </div> <!--Fim logo-->
+
+                <div class="col-md-2"> <!--empresa-->
+                    <h4>Empresa</h4>
+
+                    <ul class="navbar-nav">
+                        <li>
+                            <a href="">Sobre</a>
+                        </li>
+                        <li>
+                            <a href="">Empregos</a>
+                        </li>
+                        <li>
+                            <a href="">Imprensa</a>
+                        </li>
+                        <li>
+                            <a href="">Novidades</a>
+                        </li>
+                    </ul>
+                </div><!-- Fim company-->
+
+                <div class="col-md-2"> <!--Comunidade-->
+                    <h4>Comunidades</h4>
+
+                    <ul class="navbar-nav">
+                        <li>
+                            <a href="">Artistas</a>
+                        </li>
+                        <li>
+                            <a href="">Desenvolvedores</a>
+                        </li>
+                        <li>
+                            <a href="">Marcas</a>
+                        </li>
+                    </ul>
+                </div><!--fim comunidade-->
+
+                <div class="col-md-2"> <!--links U-->
+                    <h4>Links úteis</h4>
+
+                    <ul class="navbar-nav">
+                        <li>
+                            <a href="">Ajuda</a>
+                        </li>
+                        <li>
+                            <a href="">Presentes</a>
+                        </li>
+                        <li>
+                            <a href="">Player Web</a>
+                        </li>
+                    </ul>
+                </div> <!--Fim links U-->
+
+                <div class="col-md-4 col-xs-12"> <!--Redes-->
+                    <ul>
+                        <li>
+                            <a href="">
+                                <img src="imagens/facebook.png" >
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="">
+                                <img src="imagens/twitter.png" >
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="">
+                                <img src="imagens/instagram.png" >
+                            </a>
+                        </li>
+                    </ul>
+                </div><!--Fim redes-->
+            </div>
+        </div>
+    </footer><!--Fim Rodapé-->
 
   
 
